feat: integrate Tailwind CSS into the Vue project
- Added Tailwind CSS and its Vite plugin as dependencies
- Updated Vite configuration to include Tailwind CSS plugin
- Replaced the default App.vue content with a simple Tailwind-styled header
- Created a new style.css file to import Tailwind CSS
- Removed the HelloWorld component as part of the simplification

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "lint": "eslint \"src/**/*.{ts,tsx,vue}\" --fix"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
+    "tailwindcss": "^4.1.17",
     "vue": "^3.5.25"
   },
   "devDependencies": {
