feat: implement real-time chat functionality with Socket.IO
- Added Socket.IO client and server dependencies for real-time communication
- Created Chat module and gateway in the NestJS backend to handle WebSocket connections
- Implemented chat message handling, user authentication, and online user tracking
- Developed Chat component in Vue to manage chat messages and user interactions
- Updated Vite configuration to proxy WebSocket connections to the backend
- Introduced shared types for consistent data structures between client and server

--- a/server/package.json
+++ b/server/package.json
@@ -18,8 +18,12 @@
     "@nestjs/common": "^11.1.9",
     "@nestjs/core": "^11.1.9",
     "@nestjs/platform-express": "^11.1.9",
+    "@nestjs/platform-socket.io": "^11.1.9",
+    "@nestjs/serve-static": "^5.0.4",
+    "@nestjs/websockets": "^11.1.9",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.3",
@@ -33,6 +37,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.5.0",
     "prettier": "^3.7.3",
+    "shared-types": "workspace:*",
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
