--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "socket.io-client": "^4.7.5",
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25"
   },
@@ -25,6 +26,7 @@
     "eslint-plugin-vue": "^10.6.2",
     "globals": "^16.5.0",
     "prettier": "^3.7.3",
+    "shared-types": "workspace:*",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^7.2.6",
