chore: update project configurations and improve code formatting
- Added format and lint scripts to package.json for easier code maintenance
- Updated Prettier configuration to include printWidth setting for both client and server
- Modified format scripts in client and server package.json to use --list-different option
- Refactored Chat.vue and socket.ts for improved readability and consistency
- Enhanced logging in chat.gateway.ts using NestJS Logger for better debugging

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{ts,tsx,vue}\"",
+    "format": "prettier --write \"src/**/*.{ts,tsx,vue}\" --list-different",
     "lint": "eslint \"src/**/*.{ts,tsx,vue}\" --fix"
   },
   "dependencies": {
