--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "scripts": {
     "dev": "concurrently -n \"client,server\" -c \"yellow,blue\" \"pnpm dev:client\" \"pnpm dev:server\"",
     "dev:client": "pnpm -F client dev",
-    "dev:server": "pnpm -F server start:dev"
+    "dev:server": "pnpm -F server start:dev",
+    "format": "pnpm -r format",
+    "lint": "pnpm -r lint"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.14",
