refactor: restructure project types and update socket communication
- Moved shared types from 'shared-types' to 'server/types' for better organization
- Updated socket event handling in ChatGateway to use new types and improved authentication
- Refactored Chat component to import types from the new location
- Removed unused shared-types package and adjusted package.json references accordingly
- Added DTOs for message and authentication handling in the server

--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "scripts": {
-    "dev": "concurrently -n \"client,server\" -c \"yellow,blue\" \"pnpm dev:client\" \"pnpm dev:server\"",
     "dev:client": "pnpm -F client dev",
     "dev:server": "pnpm -F server start:dev",
     "format": "pnpm -r format",
     "lint": "pnpm -r lint"
   },
   "devDependencies": {
-    "@nestjs/cli": "^11.0.14",
-    "concurrently": "^9.2.1"
+    "@nestjs/cli": "^11.0.14"
   }
 }
