--- a/server/package.json
+++ b/server/package.json
@@ -5,11 +5,14 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "exports": {
+    "./types": "./src/types/index.ts"
+  },
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" --list-different",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "TERM=dumb nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs}/**/*.ts\" --fix"
@@ -21,6 +24,8 @@
     "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/serve-static": "^5.0.4",
     "@nestjs/websockets": "^11.1.9",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "socket.io": "^4.7.5"
@@ -37,7 +42,6 @@
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.5.0",
     "prettier": "^3.7.3",
-    "shared-types": "workspace:*",
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
