--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,9 +1,11 @@
 packages:
   - client
   - server
-  - shared-types
 
 onlyBuiltDependencies:
   - '@nestjs/core'
+  - '@prisma/engines'
+  - better-sqlite3
   - esbuild
+  - prisma
   - unrs-resolver
